--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,34 @@
+.nav-style {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  font-size: 1.7rem;
+}
+.nav-style-link {
+  display: block;
+  color: black;
+  text-align: center;
+  margin: 1px;
+  padding: 12px 12px;
+  text-decoration: none;
+}
+.nav-style-link-hover {
+  background-color: #111;
+  color: white;
+}
+.walk-text .btn {
+  border-radius: 10px;
+  background-color: #22283A;
+  color: #F1F1F1;
+  font-size: 16px;
+  text-align: center;
+  padding: 1rem 2rem;
+  display: inline-block;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -162,7 +193,7 @@ p {
 }
 .navigation {
   margin: auto;
-  margin-top: 10px;
+  margin-top: 15px;
   max-width: 800px;
   width: 100%;
   display: flex;
@@ -178,7 +209,7 @@ p {
   font-size: 4.2rem;
   width: 100%;
   text-align: center;
-  margin-bottom: 8px;
+  margin-bottom: 5px;
 }
 .navigation .nav-menu {
   margin: 0;
@@ -188,7 +219,7 @@ p {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  font-size: 1.8rem;
+  font-size: 1.7rem;
   /*         @media @mobile {
             justify-content: space-around;
             width: 85%;
@@ -221,6 +252,9 @@ footer {
 }
 .home .intro p {
   padding: 0 15px;
+}
+.home img {
+  border-radius: 5px;
 }
 .home .space-images {
   display: flex;
