--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,13 +2,14 @@
 
 .navigation {
     margin: auto;
-    margin-top: 15px;
-    max-width: 800px;
     width:  100%;
+    background-color: @wild-sand;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-content: center;
+    border-bottom:  2px @sea-shell solid;
+
 /*         @media @mobile {
         align-items: center;
         flex-direction: column;
