--- a/less/home-page.less
+++ b/less/home-page.less
@@ -71,12 +71,14 @@
       padding: 0px 0px;
       // margin: 20px 2.5%;
       height: 100%;
+      margin-bottom: 10px;
     }
 
     .walk-text {
       width: 50%;
       @media @phone {
         width: 100%;
+        padding:0 15px;
       }
 
       h3 {
@@ -103,6 +105,7 @@
         order:  -1;
         width: 95%;
         margin-left: auto;
+        margin-top: 15px;
       }
       img {
         width: 100%;
