--- a/less/navigation.less
+++ b/less/navigation.less
@@ -38,3 +38,16 @@
         }   
     }
 }
+
+/*Stretch Goal -- Animation */
+.logo { 
+    position: relative;
+    animation: mymove 5s 1;
+  }
+.logo {
+    animation-timing-function: ease;
+}
+@keyframes mymove {
+    from {left: 500px;}
+    to {left: 0px;}
+    }
